# BRiCk

./: .gitlab-ci.yml  .mailmap  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  _CoqProject.template  split-brick.sh
elpi-extra/: README.md  dune  dune-project  elpi-extra.opam
elpi-extra/accumulate_bug/: test_accumulate_twice.v
elpi-extra/extra/: NES.v  add_predicate_command.v  dune  extra.v  prelude.v  reification.v
elpi-extra/extra/Command/: both.elpi.in  interp.elpi.in  synterp.elpi.in
elpi-extra/extra/Command/both/: attr.elpi
elpi-extra/extra/Program/: both.elpi.in  interp.elpi.in  synterp.elpi.in
elpi-extra/extra/Program/both/: coq.elpi  diag.elpi  elpi.elpi  list.elpi  option.elpi
elpi-extra/extra/Program/interp/: bool.elpi  coq.elpi  diag.elpi  ident.elpi  int.elpi  list.elpi  option.elpi  pair.elpi
elpi-extra/extra/Tactic/: both.elpi.in  interp.elpi.in  synterp.elpi.in
elpi-extra/extra/TacticCommand/: interp.elpi.in
elpi-extra/extra/TacticCommand/interp/: coq.elpi
elpi-extra/tests/: dune  tc_command.v  tc_program.v  tc_tactic.v  test.elpi  test_attr.v  test_diag.v  test_ident.v  test_int.v  test_list.v  test_locate_all.v  test_option.v  test_pair.v  test_type_error.v
elpi-extra/tests/NES/: tc_command.v
ltac2-extra/: README.md  dune-project  ltac2-extra.opam
ltac2-extra/plugin/: coqOptions.ml  goalState.ml  intMap.ml  iterators.ml  iterators.mli  misc.ml  structureUtil.ml  tac2constr.ml  tac2constr.mli  tacUtil.ml  tacUtil.mli  warnings.ml
ltac2-extra/tests/: dune  test_constr.v  test_control.v  test_int.v  test_intgraph.v  test_level_env.v
ltac2-extra/theories/: dune  extra.v
ltac2-extra/theories/internal/: array.v  char.v  constr.v  control.v  coq_option.v  env.v  fresh.v  fset.v  ident.v  init.v  int.v  intgraph.v  level_env.v  list.v  ltac1.v  misc.v  obj.v  oneshot.v  option.v  plugin.v  printf.v  std.v  string.v  tc.v  transparent_state.v  warnings.v
ltac2-llm/: README.md  dune  dune-project  llm_query.py  ltac2-llm-plugin.opam  ltac2-llm.opam
ltac2-llm/plugin/: dune  main.ml
ltac2-llm/theories/: dune  llm.v
ltac2-logger/: README.md  dune  dune-project  ltac2-logger.opam
ltac2-logger/plugin/: coq_output.ml  coq_output.mli  flags.ml  ltac2_format.ml  ltac2_format.mli  main.ml
ltac2-logger/theories/: dune  logger.v
ocaml-rocq-extra/: dune  dune-project  rocq-extra.opam
ocaml-rocq-extra/src/: extra.ml  extra_msg.ml  extra_pattern.ml  extra_pattern.mli  extra_pp.ml  extra_transparentState.ml
ocaml-stdlib-extra/: dune-project  stdlib-extra.opam
ocaml-stdlib-extra/src/: JSON.ml  JSON.mli  buffer.ml  buffer.mli  extra.ml  format.ml  format.mli  list.ml  list.mli  prelude.ml  prelude.mli  stream.ml  stream.mli  string.ml  string.mli  time.ml  time.mli
rocq-bluerock-brick/theories/lang/cpp/: code_notations.v  compile.v  (+11 more)
rocq-bluerock-hint-db/: dune-project  rocq-bluerock-hint-db.opam
rocq-bluerock-hint-db/plugin/: dune  hintDbExtra.ml
rocq-bluerock-iris/: dune-project  rocq-bluerock-iris.opam
rocq-bluerock-iris/theories/: dune
rocq-bluerock-iris/theories/algebra/: authset.v  big_op.v  coGset.v  commons.v  dfrac_agree.v  excl_auth.v  frac_auth.v  gset_bij.v  list.v  monoid.v  restrict.v  telescopes.v  wrap.v
rocq-bluerock-iris/theories/base_logic/: invariants.v  iprop_invariants.v  iprop_own.v  iprop_prop.v  monpred_invariants.v  monpred_na_invariants.v  monpred_own.v  mpred.v  own_instances.v  upred_entailsN.v
rocq-bluerock-iris/theories/bi/: ChargeCompat.v  atomic1.v  atomic_commit.v  atomic_read.v  atomic_update.v  atomic_update_properties.v  big_op.v  bupd_family.v  cancelable_invariants.v  derived_laws.v  embedding.v  entailsN.v  errors.v  fractional.v  fupd_iff.v  includedI.v  invariants.v  laterable.v  linearity.v  monpred.v  monpred_entailsN.v  monpred_na_invariants.v  na_invariants.v  observe.v  only_provable.v  own.v  prelude.v  prop_constraints.v  spec.v  split_andb.v  split_andb_tests.v  split_frac.v  split_frac_tests.v  telescopes.v  wand_borrow.v  weakly_objective.v
rocq-bluerock-iris/theories/proofmode/: fancy_updates.v  named_binder.v  own_obs.v  proofmode.v
rocq-bluerock-iris/theories/si_logic/: algebra.v  bi.v
rocq-bluerock-iris/theories/tactics/: proper.v
rocq-bluerock-iris/theories/wp_io/: inout_weakestpre.v  lang.v  trace_adequacy.v  wp_io_compose.v
rocq-bluerock-prelude/theories/: addr.v  avl.v  base.v  bitsN.v  bool.v  bytestring.v  bytestring_core.v  compare.v  dune  error.v  fin.v  fin_map_dom.v  fin_maps.v  fin_sets.v  finite.v  finite_prod.v  fun_maps.v  functions.v  gmap.v  hw_types.v  interrupts.v  lens.v  letstar.v  list.v  list_numbers.v  listset_nodup.v  name.v  named_binder.v  notations.v  numbers.v  option.v  page.v  parray.v  parsec.v  prelude.v  propset.v  pstring.v  pstring_string.v  relations.v  sets.v  (+9 more)
rocq-bluerock-prelude/theories/arith/: builtins.v  operator.v  types.v  z_to_bytes.v
rocq-bluerock-prelude/theories/axioms/: funext.v
rocq-bluerock-prelude/theories/elpi/: basis.v  coq.elpi  derive.v  derive_test.v
rocq-bluerock-prelude/theories/tactics/: base_dbs.v  proper.v  telescopes.v
rocq-bluerock-rocq-internals/: .gitignore  README.md  dune-project  rocq-bluerock-rocq-internals.opam
rocq-bluerock-rocq-internals/plugin/: dune  rocq_internals.ml  rocq_internals.mli
rocq-tc-db-info/: README.md  dune  dune-project  tc-db-info-plugin.opam  tc-db-info.opam
rocq-tc-db-info/plugin/: dune  g_hint_commands.mlg  main.ml
rocq-tc-db-info/tests/: dune  setup-project.sh  test.v
rocq-tc-db-info/tests/tc-db-info.t/: run.t  test.v
rocq-tc-db-info/theories/: dune  tc_db_info.v
rocq-tools/: README.md  dune-project  rocq-tools.opam
rocq-tools/lib/: JSON.mli  base64.ml  base64.mli  data.ml  data.mli  extra.ml  extra.mli  globfield.ml  globfield.mli  globfs.ml  globfs.mli  log.ml  log.mli  profile.ml  profile.mli  spandata.ml  spandata.mli  zip.ml  zip.mli
rocq-tools/scripts/: csv-summary.sh  extract-all.sh  globfs-extract-all.sh  hint-data-extract-all.sh  html-diff-all.sh  report.sh
rocq-tools/tests/: dune
rocq-tools/tests/coqc-perf.t/: gen.ml  run.t
(+507 files in other folders)
