(lang dune 3.17)
(using coq 0.8)
(name elpi-extra)

(generate_opam_files)

(maintainers
 "Jan-Oliver Kaiser <janno@bluerock.io>")

(authors
 "David Swasey <david@bluerock.io>")

(license LicenseRef-BedRock)

(source (github bluerock-io/BRiCk))

(package
 (name elpi-extra)
 (synopsis "Extension of the (Rocq) Elpi standard library")
 (depends coq-stdlib coq-elpi ltac2-extra))

(subst disabled)
