(lang dune 3.16)
(using coq 0.8)
(name rocq-bluerock-iris)

(generate_opam_files)

(maintainers
  "Gregory Malecha <gregory@bluerock.io>"
  "Paolo Giarrusso <paolo@bluerock.io>"
  "Jan-Oliver Kaiser <janno@bluerock.io>"
  "Hai Dang <hai@bluerock.io>"
  "Simon Hudon <simon@bluerock.io>"
)

(authors
 "Gregory Malecha <gregory@bluerock.io>"
 "Paolo Giarrusso <paolo@bluerock.io>"
 "Jan-Oliver Kaiser <janno@bluerock.io>"
 "Hai Dang <hai@bluerock.io>"
 "Simon Hudon <simon@bluerock.io>"
 "Abhishek Anand"
 "Gordon Stewart"
 "David Swasey"
 "František Farka"
 "Rodolphe Lepigre")

(license LicenseRef-BedRock)

(source (github bluerock-io/BRiCk))

(package
 (name rocq-bluerock-iris)
 (synopsis "BlueRock's extensions to Iris")
 (depends
  coq
  rocq-upoly
  coq-stdpp
  coq-iris
  rocq-lens
  rocq-lens-elpi
  elpi
  coq-elpi))
(subst disabled)
