(lang dune 3.8)
(using coq 0.8)
(name rocq-bluerock-rocq-internals)

(generate_opam_files)

(maintainers
  "Jan-Oliver Kaiser <janno@bluerock.io>")

(authors
 "Jan-Oliver Kaiser <janno@bluerock.io>")

(source (github bluerock-io/BRiCk))

(license LGPL-2.1-only)

(package
 (name rocq-bluerock-rocq-internals)
 (synopsis "Plugin to expose some internals of Rocq")
 (depends coq-core))
