(include_subdirs qualified)
(coq.theory
 (name bedrock.ltac2.llm)
 (package ltac2-llm)
 (theories Ltac2)
 (plugins ltac2-llm-plugin.plugin))

; We generate a dummy file to force full dependency on the plugin package.
; The contents of the file is not important (no caching issue here).
(rule
 (targets dummy.v)
 (deps (package ltac2-llm-plugin))
 (action (with-stdout-to %{targets} (echo "(* dummy file *)"))))
