(include_subdirs qualified)
(coq.theory
 (name bluerock.prelude)
 (package rocq-bluerock-prelude)
 (theories
  stdpp
  bluerock.upoly
  elpi elpi.apps.locker elpi.apps.NES
  Lens Lens.Elpi Ltac2 bluerock.ltac2.extra))

; Copy dependencies --- typically Elpi files needed for `From ⋯ Extra
; Dependency` --- into dune's build directory. Arrange for the dummy
; target to change with its dependencies (because a constant target
; might some day run afoul of dune's cache).
(rule
 (target dummy.v)
 (deps (glob_files_rec elpi/*.elpi))
 (action
  (with-stdout-to %{target}
   (run coq-dummy-gen %{deps}))))
