(include_subdirs qualified)
(coq.theory
 (name tc_db_info)
 (package tc-db-info)
 (theories Ltac2)
 (plugins tc-db-info-plugin.plugin))

; We generate a dummy file to force full dependency on the plugin package.
; The contents of the file is not important (no caching issue here).
(rule
 (targets dummy.v)
 (deps (package tc-db-info-plugin))
 (action (with-stdout-to %{targets} (echo "(* dummy file *)"))))
