(include_subdirs qualified)
(coq.theory
  (name bluerock.lang.cpp)
  (package rocq-bluerock-brick)
  (plugins rocq-bluerock-brick.plugin)
  (theories
    ; bluerock.iris.extra deps
    Stdlib
    stdpp
    bluerock.upoly
    elpi elpi_elpi elpi.apps.locker elpi.apps.NES
    Lens Lens.Elpi
    Ltac2 bluerock.ltac2.extra
    bluerock.prelude
    iris
    ; bluerock.iris.extra deps end
    bluerock.iris.extra
    ; Equations
    Equations Equations.Prop Equations.Type))
